applications/paste/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: paste
  name: paste
